--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- dependency for YAML file handling  -->
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.17.2</version>
+        </dependency>
     </dependencies>
 
 </project>
