--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.17.2</version>
         </dependency>
+
+        <!-- To generate random String and number  -->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
