Pushing code to store data into database for newly created web table record

--- a/Config/Config.yml
+++ b/Config/Config.yml
@@ -12,6 +12,6 @@ AppURL : https://demoqa.com/login
 UserName : TestUser
 Password : TestUser@12345
 
-DBurl : jdbc:mysql://localhost:3306/nopcommerce
+DBurl : jdbc:mysql://localhost:3306/demoQA
 DBUserName : root
 DBPassword : root
