--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,21 @@
             <version>5.3.0</version>
         </dependency>
 
+        <!-- For report generation  -->
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>7.18.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>5.8.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
