--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,16 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- For Soft Assertion  -->
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.26.3</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
